--- a/index.html
+++ b/index.html
@@ -31,32 +31,23 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Hypem-scraper-python</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Hypem-scraper-python was forked from a JavaScript/Python work-in-progress that would ideally allow a user to download all of their favorited music on Hypem. The JavaScript portion has been removed because it was incomplete and ineffective. This is just the python script reworked so that it will scrape a specified user's Hype Machine favorites and download each respective sound cloud mp3. The songs do not always match up, however the program is about 95% accurate.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h3>Requirements</h3>
+<p>The python script requires that you have at least Python 3.3.0, requests and simpleJSON installed.</p>
+<ul>
+<li><a href="http://www.python.org/download/releases/">Python 3.3.0</a></li>
+<li><a href="http://docs.python-requests.org/en/latest/">requests</a></li>
+<li><a href="http://simplejson.readthedocs.org/en/latest/">simpleJSON</a></li>
+</ul>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h3>Usage</h3>
+<p>Run "scrape_songs.py" using the Python shell.</p>
+<p>Type the following, replacing "username" with the desired username, in to the Python shell:</p>
+<pre><code>get_all_songs("username")</code></pre>
+<p>Each song will be downloaded to the same folder that "scrape_songs.py" is in.</p>
       </section>
     </div>
 
